--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
-		<title>&#1071;&#1088;&#1072;&#1082;&#1090;&#1080;&#1085;&#1089;&#1082;&#1086;&#1077; &#1084;&#1077;&#1089;&#1090;&#1086;&#1088;&#1086;&#1078;&#1076;&#1077;&#1085;&#1080;&#1077; &#1048;&#1053;&#1050;: &#1087;&#1072;&#1085;&#1086;&#1088;&#1072;&#1084;&#1085;&#1099;&#1081; &#1090;&#1091;&#1088;</title>
+		<title>&#1058;&#1088;&#1080; &#1080;&#1079;&#1084;&#1077;&#1088;&#1077;&#1085;&#1080;&#1103; &#1071;&#1088;&#1072;&#1082;&#1090;&#1099;</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
