--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<meta name="twitter:image:src" content="preview.jpg">		
 		<style type="text/css" title="Default">
 			body, div, h1, h2, h3, span, p {
-				font-family: Verdana,Arial,Helvetica,sans-serif;
+				font-family: 'Roboto',Verdana,Arial,Helvetica,sans-serif;
 			}
 			/* fullscreen */
 			html {
