--- a/index.html
+++ b/index.html
@@ -77,8 +77,6 @@
 		</script>
 		<script type="text/javascript" src="skin.js">
 		</script>
-		<script type="text/javascript" src="pano2vrgyro.js">
-		</script>
 		<div id="container" style="width:100%;height:100%;">
 		<br>Loading...<br><br>
 		This content requires HTML5 with CSS3 3D Transforms or WebGL.
@@ -106,7 +104,7 @@
 		skin=new pano2vrSkin(pano);
 		// load the configuration
 		window.addEventListener("load", function() {
-			pano.readConfigUrlAsync("index.xml",function() {  gyro=new pano2vrGyro(pano,"container"); gyro.setTrueNorth(true);});
+			pano.readConfigUrlAsync("index.xml");
 		});
 		
 			params.base=".";
