--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		</script>
 		<script type="text/javascript">
 		new ClipboardJS('.btn');
+		const coverShow = urlParams.get('coverShow')
 		</script>
 		<script type="text/javascript" src="skin.js">
 		</script>
